--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,20 +1,20 @@
 
 <div id="mysidebar">
-<nav class="bs-docs-sidebar hidden-print hidden-sm hidden-xs affix">
+    <nav class="bs-docs-sidebar hidden-print hidden-md-down">
     <ul class="nav bs-docs-sidenav">
 
         {% for entry in sidebar %}
         {% for subcategory in entry.subcategories %}
-        <li>
+        <li class="nav-item">
 
             <!--need a separate structure for external links.-->
             {% if subcategory.url != nil %}
                 <a href="{{ subcategory.url }}" target="_blank" class="h4">{{ subcategory.title }}</a>
             {% else %}
                 <a href="#{{subcategory.title | replace: ' ', '_'}}" data-toggle="collapse" class="h4">{{ subcategory.title }}</a>
-                <ul id="{{subcategory.title | replace: ' ', '_'}}" class="nav collapse">
+                <ul id="{{subcategory.title | replace: ' ', '_'}}" class="collapse nav">
                     {% for item in subcategory.items %}
-                    <li><a href="{{ item.url | prepend: site.github.url }}">{{item.title}}</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ item.url | prepend: site.github.url }}">{{item.title}}</a></li>
                     {% endfor %}
                 </ul>
             {% endif %}
