--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
                 <a href="{{ subcategory.url }}" target="_blank" class="h4">{{ subcategory.title }}</a>
             {% else %}
                 <a href="#{{subcategory.title | replace: ' ', '_'}}" data-toggle="collapse" class="h4">{{ subcategory.title }}</a>
-                <ul id="{{subcategory.title | replace: ' ', '_'}}" class="collapse nav">
+                <ul id="{{subcategory.title | replace: ' ', '_'}}" class="collapse in nav">
                     {% for item in subcategory.items %}
                     <li class="nav-item"><a class="nav-link" href="{{ item.url | prepend: site.github.url }}">{{item.title}}</a></li>
                     {% endfor %}
