--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,7 +11,7 @@
             {% if subcategory.url != nil %}
                 <a href="{{ subcategory.url }}" target="_blank" class="h4">{{ subcategory.title }}</a>
             {% else %}
-                <a href="#{{subcategory.title | replace: ' ', '_'}}" data-toggle="collapse" class="h4">{{ subcategory.title }}</a>
+                <a href="#" data-target="#{{subcategory.title | replace: ' ', '_'}}" data-toggle="collapse">{{ subcategory.title }}</a>
                 <ul id="{{subcategory.title | replace: ' ', '_'}}" class="collapse in nav">
                     {% for item in subcategory.items %}
                     <li class="nav-item"><a class="nav-link" href="{{ item.url | prepend: site.github.url }}">{{item.title}}</a></li>
