--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -1,6 +1,10 @@
 <!-- Navigation -->
 <nav class="navbar navbar-light bg-faded navbar-fixed-top" role="navigation">
-    <div class="container topnavlinks">
+    <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2" aria-controls="exCollapsingNavbar2" aria-expanded="false" aria-label="Toggle navigation">
+        &#9776;
+    </button>
+
+    <div class="container collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
 
         <a class="navbar-brand" href="{{ base }}/index.html">
             <img src="{{ base }}/common_images/logo.png" style="height:30px; width:30px" />
