Added position fixed to sidebar (affix is gone)

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 
 <div id="mysidebar">
-    <nav class="bs-docs-sidebar hidden-print hidden-md-down">
+    <nav class="bs-docs-sidebar hidden-print hidden-md-down" style="position: fixed;">
     <ul class="nav bs-docs-sidenav">
 
         {% for entry in sidebar %}
